# optimacros

./: Dockerfile  README.md  pyproject.toml
src/: main.py
src/heavy/: router.py  service.py
src/pages/: router.py
src/templates/: base.html  home.html
src/test/: test_availability.py  test_websocket.py
