[tool.poetry]
name = "optimacros"
version = "0.1.0"
description = "test for employability"
authors = ["resolute_hamster <resolute_hamster@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = "^0.94.0"
websockets = "^10.4"
gmpy2 = "^2.1.5"
aiohttp = "^3.8.4"
uvicorn = "^0.21.0"
jinja2 = "^3.1.2"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
